@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST after_commit-1.0.10.gem 10240 RMD160 5492f4f962463c9241bdb0061cffbf743b591363 SHA1 a5b8e9e89df6a7fdbd7baa35a5bff2f788fe6bd0 SHA256 343bc7ba840fe9c61976c5ec6191d2da07a7db0265a271109262ba03eeac5d51
 DIST after_commit-1.0.8.gem 10240 RMD160 2945ff9f56461497c44eb1c3c970c0d7a4abbda3 SHA1 318ad9a100d44018084241d7554e338036330869 SHA256 b213baa50055ffc21329b48a5d8f736acec117269d3d58307fcad1e5b5f3e706
+EBUILD after_commit-1.0.10.ebuild 903 RMD160 7a9c96ad52fa41d882b85c38dcf5c30feb953a3c SHA1 1ea5ca2207e40428f35cf6f0d084ce7e6414fb74 SHA256 7aa114542c3b9fa84158dd783a5666820edbcff8cee8f27e4186cafbf63c2bab
 EBUILD after_commit-1.0.8.ebuild 708 RMD160 3d666683b9785b89760294bd7e15419988eca1e9 SHA1 e490880e75012ef2444f7e728e811e99d1fa0da7 SHA256 3268befa4fd3e617ca3e4071437d73c4b5fed66a90594f51f24f03e8ef6f3b0e
-MISC ChangeLog 1058 RMD160 a146057415a49f44628b4f38674a5890191fbe40 SHA1 4c0948311445f3b9d9d064211ff95cb7d2b60a56 SHA256 3c96bfac5c5a5d1ae228d181f3f659e987b1527f76fb0a86d2ed41777529dec6
+MISC ChangeLog 1190 RMD160 05e77bba910e8289624ef31a0c8129d2ecc5816d SHA1 7135b8d83c54542c798e076b6bde74dda6a0f7ad SHA256 928ce8b78c00691477997abb6d9bccfdaab98a35f0c788d6b0a8c6d4d0e7aea1
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk0ZphkACgkQrnu0mw69JkrFUAEAhEL77XKPiAA5agIjsPCVBwI4
-sZnSbvwUB9v0fU1zWegA/3y4olK0t3MLuntb4H1itb2mGevl5CCPYVc4Ls3eI+PO
-=T16A
+iF4EAREIAAYFAk4CyvcACgkQrnu0mw69Jkr5YAD/bdqvpODzn00OXB3oJsI6Lo/F
+giIy4ED0F5PfTz73kjcA/0ojBcr6fphEz+vAMJvEUSToAvXxG5vrEQ1zdr1YYcQh
+=SozS
 -----END PGP SIGNATURE-----
