@@ -1,0 +1,32 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.3.0.ebuild,v 1.1 2006/08/28 14:34:06 pclouds Exp $
+
+EAPI="2"
+USE_RUBY="ruby18 ree18"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_TASK_TEST=""
+RUBY_FAKEGEM_EXTRADOC="README.textile"
+
+inherit ruby-fakegem
+
+DESCRIPTION="ActiveRecord library with before_commit, after_commit, before_rollback and after_rollback callbacks."
+HOMEPAGE="http://freelancing-gods.com/"
+LICENSE="MIT"
+
+KEYWORDS="~amd64 ~x86 ~x86-macos"
+SLOT="0"
+IUSE=""
+
+ruby_add_bdepend "test? ( dev-ruby/sqlite3-ruby )"
+
+ruby_add_rdepend "<dev-ruby/activerecord-3"
+
+each_ruby_prepare() {
+	sed -i -e "s/require 'active_record'/gem 'activerecord', '~>2.3.0'; require 'active_record'/" test/test_helper.rb || die
+}
+
+each_ruby_test() {
+	${RUBY} -S testrb test/* || die "Tests failed"
+}
