@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/after_commit
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*after_commit-1.0.10 (23 Jun 2011)
+
+  23 Jun 2011; Hans de Graaff <graaff@gentoo.org> +after_commit-1.0.10.ebuild:
+  Version bump.
 
   28 Dec 2010; Hans de Graaff <graaff@gentoo.org> after_commit-1.0.8.ebuild:
   Keyword ~x86-macos.
